Adds header and title to page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		<title>Sally's Photography</title>
 	</head>
 	<body>
-		<p>Sally's Photography</p>
+		<header>
+			<h1>
+				Sally Hart
+			</h1>
+			<p>
+				Photographer and Designer
+			</p>
+		</header>
 	</body>
 </html>
