Adds sections for images

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 				Photographer and Designer
 			</p>
 		</header>
+			<section class=image1></section>
+			<section class=image2></section>
+			<section class=image3></section>
+			<section class=image4></section>
+		
 	</body>
 </html>
