--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 			<section class=image2></section>
 			<section class=image3></section>
 			<section class=image4></section>
-		
+		<footer>
+		<a href="mailto:hello@example.com">Email</a>
+		<a href="https://google.com">Google</a>
+		<a href="https://facebook.com">Facebook</a>
+		</footer>
 	</body>
 </html>
