--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-gb">
 	<head>
 		<title>Sally's Photography</title>
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="styles/style.css">
 	</head>
 	<body>
 		<header>
