--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Sally's Photography</title>
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 		<link rel="stylesheet" href="styles/style.css">
 	</head>
 	<body>
@@ -10,7 +11,7 @@
 			<h1>
 				Sally Hart
 			</h1>
-			<p>
+			<p class="badge badge-secondary">
 				Photographer and Designer
 			</p>
 		</header>
